08-kubernetes-ingress-project/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: ingress-demo
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 5678
