08-kubernetes-ingress-project/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: ingress-demo
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5678
